--- a/EDA.qmd
+++ b/EDA.qmd
@@ -39,7 +39,7 @@ editor: visual
 ```{r}
 library(readr)
 
-data <- read_csv("../diabetes_binary_health_indicators_BRFSS2015.csv")
+data <- read_csv("diabetes_binary_health_indicators_BRFSS2015.csv")
 head(data)
 
 ```
